// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`arguments.js - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
console.log(@deco class Foo {})
console.log(@deco class {})

=====================================output=====================================
console.log(
  @deco
  class Foo {},
)
console.log(
  @deco
  class {},
)

================================================================================
`;

exports[`arguments.js - {"semi":false} format[acorn] 1`] = `
"Unexpected character '@' (1:13)
> 1 | console.log(@deco class Foo {})
    |             ^
  2 | console.log(@deco class {})
  3 |
Cause: Unexpected character '@' (1:12)"
`;

exports[`arguments.js - {"semi":false} format[espree] 1`] = `
"Unexpected character '@' (1:13)
> 1 | console.log(@deco class Foo {})
    |             ^
  2 | console.log(@deco class {})
  3 |
Cause: Unexpected character '@'"
`;

exports[`arguments.js - {"semi":false} format[flow] 1`] = `
"Unexpected token \`@\` (1:13)
> 1 | console.log(@deco class Foo {})
    |             ^
  2 | console.log(@deco class {})
  3 |
Cause: Unexpected token \`@\` (1:12)"
`;

exports[`arguments.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
console.log(@deco class Foo {})
console.log(@deco class {})

=====================================output=====================================
console.log(
  @deco
  class Foo {},
);
console.log(
  @deco
  class {},
);

================================================================================
`;

exports[`arguments.js format[acorn] 1`] = `
"Unexpected character '@' (1:13)
> 1 | console.log(@deco class Foo {})
    |             ^
  2 | console.log(@deco class {})
  3 |
Cause: Unexpected character '@' (1:12)"
`;

exports[`arguments.js format[espree] 1`] = `
"Unexpected character '@' (1:13)
> 1 | console.log(@deco class Foo {})
    |             ^
  2 | console.log(@deco class {})
  3 |
Cause: Unexpected character '@'"
`;

exports[`arguments.js format[flow] 1`] = `
"Unexpected token \`@\` (1:13)
> 1 | console.log(@deco class Foo {})
    |             ^
  2 | console.log(@deco class {})
  3 |
Cause: Unexpected token \`@\` (1:12)"
`;

exports[`class-expression.js - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
const a1 = (@deco class Foo {});
const a2 = (@deco class {});

(@deco class Foo {});
(@deco class {});

const b1 = []
;(@deco class Foo {})

const b2 = []
;(@deco class {})

// This is not a \`ClassExpression\` but \`ClassDeclaration\`
@deco class Foo {}

=====================================output=====================================
const a1 =
  @deco
  class Foo {}
const a2 =
  @deco
  class {}

;(
  @deco
  class Foo {}
)
;(
  @deco
  class {}
)

const b1 = []
;(
  @deco
  class Foo {}
)

const b2 = []
;(
  @deco
  class {}
)

// This is not a \`ClassExpression\` but \`ClassDeclaration\`
@deco
class Foo {}

================================================================================
`;

exports[`class-expression.js - {"semi":false} format[acorn] 1`] = `
"Unexpected character '@' (1:13)
> 1 | const a1 = (@deco class Foo {});
    |             ^
  2 | const a2 = (@deco class {});
  3 |
  4 | (@deco class Foo {});
Cause: Unexpected character '@' (1:12)"
`;

exports[`class-expression.js - {"semi":false} format[espree] 1`] = `
"Unexpected character '@' (1:13)
> 1 | const a1 = (@deco class Foo {});
    |             ^
  2 | const a2 = (@deco class {});
  3 |
  4 | (@deco class Foo {});
Cause: Unexpected character '@'"
`;

exports[`class-expression.js - {"semi":false} format[flow] 1`] = `
"Unexpected token \`@\` (1:13)
> 1 | const a1 = (@deco class Foo {});
    |             ^
  2 | const a2 = (@deco class {});
  3 |
  4 | (@deco class Foo {});
Cause: Unexpected token \`@\` (1:12)"
`;

exports[`class-expression.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
const a1 = (@deco class Foo {});
const a2 = (@deco class {});

(@deco class Foo {});
(@deco class {});

const b1 = []
;(@deco class Foo {})

const b2 = []
;(@deco class {})

// This is not a \`ClassExpression\` but \`ClassDeclaration\`
@deco class Foo {}

=====================================output=====================================
const a1 =
  @deco
  class Foo {};
const a2 =
  @deco
  class {};

(
  @deco
  class Foo {}
);
(
  @deco
  class {}
);

const b1 = [];
(
  @deco
  class Foo {}
);

const b2 = [];
(
  @deco
  class {}
);

// This is not a \`ClassExpression\` but \`ClassDeclaration\`
@deco
class Foo {}

================================================================================
`;

exports[`class-expression.js format[acorn] 1`] = `
"Unexpected character '@' (1:13)
> 1 | const a1 = (@deco class Foo {});
    |             ^
  2 | const a2 = (@deco class {});
  3 |
  4 | (@deco class Foo {});
Cause: Unexpected character '@' (1:12)"
`;

exports[`class-expression.js format[espree] 1`] = `
"Unexpected character '@' (1:13)
> 1 | const a1 = (@deco class Foo {});
    |             ^
  2 | const a2 = (@deco class {});
  3 |
  4 | (@deco class Foo {});
Cause: Unexpected character '@'"
`;

exports[`class-expression.js format[flow] 1`] = `
"Unexpected token \`@\` (1:13)
> 1 | const a1 = (@deco class Foo {});
    |             ^
  2 | const a2 = (@deco class {});
  3 |
  4 | (@deco class Foo {});
Cause: Unexpected token \`@\` (1:12)"
`;

exports[`member-expression.js - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
(@deco class Foo {}).name;
(@deco class {}).name;

=====================================output=====================================
;(
  @deco
  class Foo {}
).name
;(
  @deco
  class {}
).name

================================================================================
`;

exports[`member-expression.js - {"semi":false} format[acorn] 1`] = `
"Unexpected character '@' (1:2)
> 1 | (@deco class Foo {}).name;
    |  ^
  2 | (@deco class {}).name;
  3 |
Cause: Unexpected character '@' (1:1)"
`;

exports[`member-expression.js - {"semi":false} format[espree] 1`] = `
"Unexpected character '@' (1:2)
> 1 | (@deco class Foo {}).name;
    |  ^
  2 | (@deco class {}).name;
  3 |
Cause: Unexpected character '@'"
`;

exports[`member-expression.js - {"semi":false} format[flow] 1`] = `
"Unexpected token \`@\` (1:2)
> 1 | (@deco class Foo {}).name;
    |  ^
  2 | (@deco class {}).name;
  3 |
Cause: Unexpected token \`@\` (1:1)"
`;

exports[`member-expression.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
(@deco class Foo {}).name;
(@deco class {}).name;

=====================================output=====================================
(
  @deco
  class Foo {}
).name;
(
  @deco
  class {}
).name;

================================================================================
`;

exports[`member-expression.js format[acorn] 1`] = `
"Unexpected character '@' (1:2)
> 1 | (@deco class Foo {}).name;
    |  ^
  2 | (@deco class {}).name;
  3 |
Cause: Unexpected character '@' (1:1)"
`;

exports[`member-expression.js format[espree] 1`] = `
"Unexpected character '@' (1:2)
> 1 | (@deco class Foo {}).name;
    |  ^
  2 | (@deco class {}).name;
  3 |
Cause: Unexpected character '@'"
`;

exports[`member-expression.js format[flow] 1`] = `
"Unexpected token \`@\` (1:2)
> 1 | (@deco class Foo {}).name;
    |  ^
  2 | (@deco class {}).name;
  3 |
Cause: Unexpected token \`@\` (1:1)"
`;

exports[`super-class.js - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
class Foo extends (@deco class Foo {}){}

class Fo2 extends (@deco class {}){}

=====================================output=====================================
class Foo extends (
  @deco
  class Foo {}
) {}

class Fo2 extends (
  @deco
  class {}
) {}

================================================================================
`;

exports[`super-class.js - {"semi":false} format[acorn] 1`] = `
"Unexpected character '@' (1:20)
> 1 | class Foo extends (@deco class Foo {}){}
    |                    ^
  2 |
  3 | class Fo2 extends (@deco class {}){}
  4 |
Cause: Unexpected character '@' (1:19)"
`;

exports[`super-class.js - {"semi":false} format[espree] 1`] = `
"Unexpected character '@' (1:20)
> 1 | class Foo extends (@deco class Foo {}){}
    |                    ^
  2 |
  3 | class Fo2 extends (@deco class {}){}
  4 |
Cause: Unexpected character '@'"
`;

exports[`super-class.js - {"semi":false} format[flow] 1`] = `
"Unexpected token \`@\` (1:20)
> 1 | class Foo extends (@deco class Foo {}){}
    |                    ^
  2 |
  3 | class Fo2 extends (@deco class {}){}
  4 |
Cause: Unexpected token \`@\` (1:19)"
`;

exports[`super-class.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
class Foo extends (@deco class Foo {}){}

class Fo2 extends (@deco class {}){}

=====================================output=====================================
class Foo extends (
  @deco
  class Foo {}
) {}

class Fo2 extends (
  @deco
  class {}
) {}

================================================================================
`;

exports[`super-class.js format[acorn] 1`] = `
"Unexpected character '@' (1:20)
> 1 | class Foo extends (@deco class Foo {}){}
    |                    ^
  2 |
  3 | class Fo2 extends (@deco class {}){}
  4 |
Cause: Unexpected character '@' (1:19)"
`;

exports[`super-class.js format[espree] 1`] = `
"Unexpected character '@' (1:20)
> 1 | class Foo extends (@deco class Foo {}){}
    |                    ^
  2 |
  3 | class Fo2 extends (@deco class {}){}
  4 |
Cause: Unexpected character '@'"
`;

exports[`super-class.js format[flow] 1`] = `
"Unexpected token \`@\` (1:20)
> 1 | class Foo extends (@deco class Foo {}){}
    |                    ^
  2 |
  3 | class Fo2 extends (@deco class {}){}
  4 |
Cause: Unexpected token \`@\` (1:19)"
`;
